// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate the application test app compile 1`] = `
Array [
  Array [
    "Compile:
 output: %s
 compress: %s
 files:
  %s 

",
    "/Users/jason/projects/cspell/packages/cspell-tools/temp",
    "false",
    "/Users/jason/projects/cspell/packages/cspell-tools/Samples/cities.txt",
  ],
  Array [
    "Process \\"%s\\" to \\"%s\\"",
    "/Users/jason/projects/cspell/packages/cspell-tools/Samples/cities.txt",
    "/Users/jason/projects/cspell/packages/cspell-tools/temp/cities.txt",
  ],
  Array [
    "Done \\"%s\\" to \\"%s\\"",
    "/Users/jason/projects/cspell/packages/cspell-tools/Samples/cities.txt",
    "/Users/jason/projects/cspell/packages/cspell-tools/temp/cities.txt",
  ],
  Array [
    "Complete.",
  ],
]
`;

exports[`Validate the application test app compile-trie 1`] = `
Array [
  Array [
    "Compile:
 output: %s
 compress: %s
 files:
  %s 

",
    "/Users/jason/projects/cspell/packages/cspell-tools/temp",
    "false",
    "/Users/jason/projects/cspell/packages/cspell-tools/Samples/cities.txt",
  ],
  Array [
    "Process \\"%s\\" to \\"%s\\"",
    "/Users/jason/projects/cspell/packages/cspell-tools/Samples/cities.txt",
    "/Users/jason/projects/cspell/packages/cspell-tools/temp/cities.trie",
  ],
  Array [
    "Complete.",
  ],
]
`;
